--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
+<h1>Article Details</h1>
+
+<%= link_to "New Article", new_article_path %>
+<br/>
+<%= link_to "All Articles", articles_path %>
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
