products edit delete

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,3 +12,11 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
+
+<ul>
+  <li><%= link_to "Edit", edit_article_path(@article) %></li>
+  <li><%= link_to "Destroy", article_path(@article), data: {
+    turbo_method: :delete,
+    turbo_confirm: "Are you sure?"
+  } %></li>
+</ul>
