--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New Article</h1>
+<h1>Edit Article</h1>
 <%= link_to "New Article", new_article_path %>
 <br/>
 <%= link_to "All Articles", articles_path %>
