--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,60 +1,25 @@
-
 <h1>Listing Articles</h1>
 <%= link_to "New Article", new_article_path %>
 <br/>
 <%= link_to "All Articles", articles_path %>
+<br/>
+<br/>
+Our blog has <%= Article.public_count %> articles and counting!
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th></th>
-  </tr>
 
+<ul>
   <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to "Destroy", article_path(article), data: {
-        turbo_method: :delete,
-        turbo_confirm: "Are you sure?"
-      } %></td>
-    </tr>
+    <% unless article.archived? %>
+      <li>
+        <%= article.title %>
+        <%= article.text %>
+        <%= link_to article.title, article %>
+        <%= link_to 'Show', article_path(article) %>
+        <%= link_to "Destroy", article_path(article), data: {
+          turbo_method: :delete,
+          turbo_confirm: "Are you sure?"
+        } %>
+      </li>
+    <% end %>
   <% end %>
-</table>
-
-
-
-<!--<h1>Articles</h1>-->
-
-<!--<ul>-->
-  <%# @articles.each do |article| %>
-<!--    <li>-->
-      <%#= article.title %>
-<!--    </li>-->
-  <%# end %>
-<!--</ul>-->
-
-
-<!--<h1>Articles HR EF</h1>-->
-
-<!--<ul>-->
-  <%# @articles.each do |article| %>
-<!--    <li>-->
-<!--      <a href="<%#= article_path(article) %>">-->
-        <%#= article.title %>
-<!--      </a>-->
-<!--    </li>-->
-  <%# end %>
-<!--</ul>-->
-
-<!--<h1>Articles LINK_TO</h1>-->
-
-<!--<ul>-->
-  <%# @articles.each do |article| %>
-<!--    <li>-->
-      <%#= link_to article.title, article %>
-<!--    </li>-->
-  <%# end %>
-<!--</ul>-->
+</ul>
